--- a/my_project/pubspec.yaml
+++ b/my_project/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6
   intl_phone_number_input: ^0.7.4
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
