--- a/my_project/pubspec.yaml
+++ b/my_project/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  firebase_core: ^2.19.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    # - assets/images/plant1.png
+    # - assets/images/plant2.png
+    # - assets/images/plant3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -72,19 +76,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
+  # fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-    - family: SF Pro Display
-      fonts:
-        - asset: assets/fonts/SFPRODISPLAYREGULAR.OTF
-        - asset: assets/fonts/SFPRODISPLAYBOLD.OTF
-          weight: 700
-        - asset: assets/fonts/SFPRODISPLAYSEMIBOLDITALIC.OTF
-          weight: 500
+    # - family: SF Pro Display
+    #   fonts:
+    #     - asset: assets/fonts/SF-Pro-Display-Regular.otf
+    #     - asset: assets/fonts/SF-Pro-Display-Medium.otf
+    #       weight: 500
+    #     - asset: assets/fonts/SF-Pro-Display-Semibold.otf
+    #       weight: 600
+    #     - asset: assets/fonts/SF-Pro-Display-Bold.otf
+    #       weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
