--- a/my_project/pubspec.yaml
+++ b/my_project/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   font_awesome_flutter: ^10.8.0
   flutter_launcher_icons: ^0.14.3
-
+  shared_preferences: ^2.2.2 
 dev_dependencies:
   flutter_test:
     sdk: flutter
