--- a/my_project/pubspec.yaml
+++ b/my_project/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_launcher_icons: ^0.14.3
   shared_preferences: ^2.2.2 
+  carousel_slider: ^5.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
