--- a/my_project/pubspec.yaml
+++ b/my_project/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   shared_preferences: ^2.2.2 
   carousel_slider: ^5.1.1
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
