--- a/my_project/android/.settings/org.eclipse.buildship.core.prefs
+++ b/my_project/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script C\:\\Users\\User\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.42.0\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\User\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.42.0\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\protobuf\\init.gradle
-auto.sync=true
+arguments=--init-script /home/vanne/.config/Code/User/globalStorage/redhat.java/1.42.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/init/init.gradle --init-script /home/vanne/.config/Code/User/globalStorage/redhat.java/1.42.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/protobuf/init.gradle
+auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/jdk-17.0.12
+java.home=/usr/lib/jvm/java-21-openjdk-amd64
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
