--- a/my_project/pubspec.yaml
+++ b/my_project/pubspec.yaml
@@ -42,9 +42,15 @@ dependencies:
   carousel_slider: ^5.1.1
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 dev_dependencies:
+  build_runner: ^2.5.3
+  custom_lint: ^0.7.5
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 flutter_launcher_icons:
   android: true
   ios: true
