--- a/my_project/android/.settings/org.eclipse.buildship.core.prefs
+++ b/my_project/android/.settings/org.eclipse.buildship.core.prefs
@@ -8,7 +8,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/Users/phengmenghour/.vscode/extensions/redhat.java-1.42.0-darwin-x64/jre/21.0.7-macosx-x86_64
+java.home=/Library/Java/JavaVirtualMachines/jdk-23.jdk/Contents/Home
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
